(test
 (name lru_qcheck)
 (modules lru_qcheck)
 (libraries tiny_lfu.lru alcotest qcheck-alcotest barrier))

(test
 (name lru_stm)
 (modules lru_stm)
 (libraries tiny_lfu.lru alcotest qcheck-core qcheck-stm.stm stm_run)
 (preprocess
  (pps ppx_deriving.show)))

(test
 (name lru_dscheck)
 (modules lru_dscheck)
 (libraries tiny_lfu.lru alcotest atomic dscheck))
